Responsive menu added

--- a/hex.html
+++ b/hex.html
@@ -18,8 +18,15 @@
             <ul class="nav__menu">
                 <li class="nav__menu-list"><a href="index.html">Simple</a></li>
                 <li class="nav__menu-list"><a href="hex.html">Hex</a></li>
+                <li class="nav__menu-list"><a href="rgb.html">RGB</a></li>
             </ul>
         </nav>
+
+        <div class="hamb-menu" id="menu">
+            <span class="top-bar"></span>
+            <span class="mid-bar"></span>
+            <span class="bot-bar"></span>
+        </div>
 
     </header>
 
@@ -30,6 +37,7 @@
         </div>
     </main>
 
+    <script src="menu.js"></script>
     <script src="hex.js"></script>
 </body>
 </html>
