--- a/rgb.html
+++ b/rgb.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="rgb.css">
     <title>Color Flipper</title>
 </head>
 <body>
@@ -32,12 +32,12 @@
 
     <main class="main">
         <div class="container">
-            <h2 class="background">Background color : <span class="color">blue</span></h2>
+            <h2 class="background">Background color : <span class="color">RGB(162,189,225)</span></h2>
             <button class="btn btn-hero" id="btn">Click me</button>
         </div>
     </main>
 
     <script src="menu.js"></script>
-    <script src="scripts.js"></script>
+    <script src="rgb.js"></script>
 </body>
 </html>
